<resources>
    <string name="app_name">ProyectoGym</string>
    <string name="top_icon">TOP ICON</string>
    <string name="email">Email</string>
    <string name="usuario">User</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">FORGOT PASSWORD?</string>
    <string name="or">OR</string>
    <string name="google_icon">google icon</string>
    <string name="facebook_icon">facebook icon</string>
    <string name="new_user_register_now">New User? Register Now</string>
    <string name="default_web_client_id1" translatable="false">109101837662-62ecrnqinb159g9dahacgvqq22c59vqd.apps.googleusercontent.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="body_mass_index_bmi">CALCULA TU IMC</string>
    <string name="descripci_n">Descripción :</string>
    <string name="weight">PESO :</string>
    <string name="height">ALTURA :</string>
    <string name="calculate_bmi">Caulcula IMC</string>
    <string name="save_bmi">Guardar IMC</string>
    <string name="delete_data">Borrar Datos</string>
    <string name="bmi">IMC :</string>
    <string name="description">Descripción :</string>
    <string name="in_kilograms">En Kilogramos (82)</string>
    <string name="in_meters">En metros (1.80)</string>
    <string name="under_weight">Peso Bajo</string>
    <string name="normal_weight">Peso Normal</string>
    <string name="overweight">Sobrepeso</string>
    <string name="type_1_obesity">Obesidad Tipo 1</string>
    <string name="type_2_obesity">Obesidad Tipo 2</string>
    <string name="type_3_obesity">Obesidad Tipo 3</string>
    <string name="Empty_fields">Debes introducir un peso y una altura</string>
    <string name="zero_values">El peso y la altura deben ser diferentes de 0</string>
    <string name="imagesalud">imageSalud</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>